[gd_scene load_steps=22 format=3 uid="uid://d2b8sx0wbdwsf"]

[ext_resource type="Script" uid="uid://bu1eodjnin17j" path="res://scripts/player/Player_Rigidbody_Script.gd" id="1_gwnis"]
[ext_resource type="Texture2D" uid="uid://b7r770s632k4j" path="res://Resources/Assets/Characters/characters v3/characters v3 100.png" id="2_x3wgy"]
[ext_resource type="Texture2D" uid="uid://btm7dnq7b5klo" path="res://Resources/Assets/Characters/characters v2/characters v2 DARK 100.png" id="3_3smsa"]
[ext_resource type="Script" uid="uid://c7k1kbc88uen" path="res://scripts/player/player_ground_detect.gd" id="3_fhl08"]
[ext_resource type="Script" uid="uid://cm3n7f40dw04g" path="res://scripts/player/item_kick.gd" id="4_vtle1"]
[ext_resource type="Script" uid="uid://222b1fgsv8oq" path="res://scripts/player/item_throw.gd" id="5_k53q1"]
[ext_resource type="Script" uid="uid://ccd883xnfwi6m" path="res://scripts/player/item_flip.gd" id="6_x3wgy"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2jkhj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3smsa"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8erm5"]
atlas = ExtResource("2_x3wgy")
region = Rect2(64, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ek2"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx1dd"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gymyn"]
atlas = ExtResource("2_x3wgy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu2lt"]
atlas = ExtResource("2_x3wgy")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukyrk"]
atlas = ExtResource("2_x3wgy")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f1ek2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3smsa")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8erm5")
}],
"loop": true,
"name": &"idle_angry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ek2")
}],
"loop": true,
"name": &"idle_scared",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx1dd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gymyn")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu2lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukyrk")
}],
"loop": true,
"name": &"walk_scared",
"speed": 5.0
}]

[sub_resource type="ConvexPolygonShape2D" id="ConvexPolygonShape2D_x3wgy"]
points = PackedVector2Array(6, -8, 6, 4, 5.25, 5.3, 4.1, 6.45, 3, 7, -3, 7, -4.1, 6.45, -5.25, 5.3, -6, 4, -6, -8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jy78r"]
size = Vector2(5.64, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07pr4"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3smsa"]
size = Vector2(10, 10)

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_x3wgy"]

[node name="Player" type="RigidBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 7
physics_material_override = SubResource("PhysicsMaterial_2jkhj")
lock_rotation = true
max_contacts_reported = 3
script = ExtResource("1_gwnis")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_f1ek2")
animation = &"idle_angry"

[node name="hands" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
texture = ExtResource("3_3smsa")
hframes = 13
vframes = 13
frame = 26

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("ConvexPolygonShape2D_x3wgy")

[node name="ground_check" type="Area2D" parent="."]
collision_mask = 5
script = ExtResource("3_fhl08")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ground_check"]
position = Vector2(0, 7.765)
shape = SubResource("RectangleShape2D_jy78r")

[node name="item_kick" type="Area2D" parent="."]
position = Vector2(13, 0)
collision_mask = 5
script = ExtResource("4_vtle1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_kick"]
shape = SubResource("RectangleShape2D_07pr4")

[node name="kick_timer" type="Timer" parent="item_kick"]
wait_time = 0.1
one_shot = true

[node name="item_throw" type="Area2D" parent="."]
position = Vector2(0, -13)
collision_mask = 5
script = ExtResource("5_k53q1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_throw"]
shape = SubResource("RectangleShape2D_07pr4")

[node name="throw_timer" type="Timer" parent="item_throw"]
wait_time = 0.1
one_shot = true

[node name="item_flip" type="Area2D" parent="."]
position = Vector2(0, 13)
collision_mask = 5
script = ExtResource("6_x3wgy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="item_flip"]
shape = SubResource("RectangleShape2D_3smsa")

[node name="Marker2D" type="Marker2D" parent="item_flip"]
position = Vector2(0, -28)

[node name="flip_timer" type="Timer" parent="item_flip"]
wait_time = 0.1

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMP3_x3wgy")

[connection signal="body_entered" from="ground_check" to="ground_check" method="_on_body_entered"]
[connection signal="body_exited" from="ground_check" to="ground_check" method="_on_body_exited"]
[connection signal="body_entered" from="item_kick" to="item_kick" method="_on_body_entered"]
[connection signal="body_exited" from="item_kick" to="item_kick" method="_on_body_exited"]
[connection signal="timeout" from="item_kick/kick_timer" to="item_kick" method="_on_kick_timer_timeout"]
[connection signal="body_entered" from="item_throw" to="item_throw" method="_on_body_entered"]
[connection signal="body_exited" from="item_throw" to="item_throw" method="_on_body_exited"]
[connection signal="timeout" from="item_throw/throw_timer" to="item_throw" method="_on_throw_timer_timeout"]
[connection signal="body_entered" from="item_flip" to="item_flip" method="_on_body_entered"]
[connection signal="body_exited" from="item_flip" to="item_flip" method="_on_body_exited"]
[connection signal="timeout" from="item_flip/flip_timer" to="item_flip" method="_on_flip_timer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_jump_timer_timeout"]
